--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
+    "check": "biome check --write",
+    "format": "biome format --write",
+    "lint": "biome lint --write"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
